# coconutlabs

./: .env.example  .gitignore  DESIGN.md  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.config.visual.ts
__tests__/: backfill-breakdown.test.ts  burn-api-period-gate.test.ts  burn-axis2-abandonment.test.ts  burn-claim-token.test.ts  burn-claim.test.ts  burn-collect.test.ts  burn-discovery.test.ts  burn-display-labels.test.ts  burn-get-readtime-ves.test.ts  burn-handle.test.ts  burn-handles.test.ts  burn-hashing.test.ts  burn-import-flow.test.ts  burn-index-legacy-fallback.test.ts  burn-index-models-redesign.test.ts  burn-merge-numerator.test.ts  burn-metrics-v2-namespace.test.ts  burn-migrate-clear-claim.test.ts  burn-migrate-exec.test.ts  burn-migrate-plan.test.ts  burn-numerator-precedence.test.ts  burn-parity.test.ts  burn-pricing-match.test.ts  burn-rawcwd-sidechannel.test.ts  burn-redis-store-claim.test.ts  burn-redis-store.test.ts  burn-repogroups.test.ts  burn-route-claim-matrix.test.ts  burn-route-token-integration.test.ts  burn-schema.test.ts  burn-security.test.ts  burn-server-memorystore.test.ts  (+14 more)
tools/usage-poc/: HANDOFF-period-filter.md  README.md  burn-summary.schema.json  discover-logs.sh  env-info.sh  estimate_cost.py  inspect-fields.sh  model-pricing.json  pyproject.toml  search-marker.sh  usage-report.md
tools/usage-poc/coconut_collector/: __init__.py  __main__.py  collect.py  gitcount.py  hashing.py  model-pricing.json  parsers.py
tools/usage-poc/tests/: conftest.py  test_collector.py  test_gitcount.py
(+228 files in other folders)
